2008-07-17  Brian Merrell <bgmerrell@gmail.com>

	* configure.ac, src/PreferencesDialog.cs, src/Makefile.am: Added
	check for gtk-2.12+ with #if/#else to conditionally use the GtkTooltip
	class (which requires >=2.12) without having bump up our gtk version
	requirement just yet.  Fixes Bug #543245.

2008-07-06  Johnny Jacob  <jjohnny@novell.com>

	* src/PreferencesDialog.cs: Fixes a mnemonic conflict for completed
	tasks option. "_Completed" conflicts with "_Close". Changed to 
	"C_ompleted".

2008-07-04  Johnny Jacob  <jjohnny@novell.com>

	Fix for Bug #541190.
	
	* src/Application.cs: If tasque finds another instance running, 
	exit with 0 instead of -1.

2008-06-27  Brian Merrell <bgmerrell@gmail.com>

	* src/TaskTreeView.cs:  Fix typo and add some comments.  Also slightly
	decreased delay for tooltips to appear.

2008-06-27  Brian Merrell <bgmerrell@gmail.com>

	* src/TaskTreeView.cs:  Add tooltips.  Modified the default tooltip
	behavior to make them unobtrusive.  Some variables could be moved to
	preferences later on.  Addresses bug #525281 (enhancement).  Large
	portion of patch courtesy of Sergey Kuleshov.

2008-06-23  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* NEWS: Fix links to bugs and mailing list.

2008-06-23  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.ac: Bump version to 0.1.7.

2008-06-23  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/TaskWindow.cs: Check that newly created task is non-null before
	  trying to use it.  Return if null (should show message to user,
	  though).  Fixes crash found when adding an EDS task in the "All"
	  category.

2008-06-23  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* NEWS: Updated for 0.1.6.

2008-06-23  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Check every minute to see if the day has changed.
	   If it has, and the TaskWindow is open, reinitialize the
	  TaskWindow.  Fixes bug #525306.
	* src/TaskWindow.cs: Add static IsOpen property to determine if a