@@ -1,3 +1,10 @@
+2008-07-28  Brian Merrell <bgmerrell@gmail.com>
+
+	* src/NoteDialog.cs:  Scroll to bottom of window when a new note is
+	created.  Cancel *new* note creation on Esc.  
+	* src/NoteWidget.cs:  Disallow saving empty notes.  Expose public
+	method to focus on TextView widget.
+
 2008-07-17  Brian Merrell <bgmerrell@gmail.com>
 
 	* configure.ac, src/PreferencesDialog.cs, src/Makefile.am: Added
